--- a/proyectos.html
+++ b/proyectos.html
@@ -73,10 +73,11 @@
     <p>Revisá el enlace o volvé a <a class="project-more" href="index.html#proyectos">Proyectos</a>.</p>
   </section>
 
-  <script src="proyecto.js" defer></script>
+
 </body>
 </html>
 
   <script src="proyecto.js" defer></script>
+  <script src="script.js"></script>
 </body>
 </html>
