--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- Header -->
   <header class="site-header">
     <nav class="nav" aria-label="Principal">
-      <a class="brand" href="#" aria-label="BDS Home">
+      <a class="brand" href="index.html" aria-label="BDS Home">
         <img src="img/logo-bds.png" alt="BDS.">
       </a>
 
@@ -26,7 +26,7 @@
       </button>
 
       <ul class="menu" id="mainMenu">
-        <li><a href="#home">Home</a></li>
+    
         <li><a href="#sobre-mi">Sobre mí</a></li>
         <li><a href="#proyectos">Proyectos</a></li>
         <li><a href="#contacto">Contacto</a></li>
