--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>BDS – Portafolio</title>
+  <link rel="icon" type="image/png" href="img/punto.png" />
   <link rel="stylesheet" href="style.css">
   <!-- Tipografías aproximadas -->
   <link
     href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600&family=Inter:wght@400;500&display=swap"
+    rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Bungee&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poltawski+Nowy:ital,wght@0,400..700;1,400..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
 </head>
 
@@ -26,7 +30,7 @@
       </button>
 
       <ul class="menu" id="mainMenu">
-    
+
         <li><a href="#sobre-mi">Sobre mí</a></li>
         <li><a href="#proyectos">Proyectos</a></li>
         <li><a href="#contacto">Contacto</a></li>
@@ -39,8 +43,9 @@
     <section>
       <h1>
         Bienvenidos a BDS<br>
-        un espacio para conectar<br>
-        a través del diseño digital
+        un lugar pensado para inspirar, crear
+        <br>
+        y hacer del diseño web una experiencia simple y atractiva
       </h1>
       <div class="cta">
         <a class="btn btn-primary" href="#proyectos">Ver Proyectos</a>
@@ -123,8 +128,7 @@
   <section class="band-quote" aria-label="Mensaje">
     <div class="band-quote__inner">
       <p class="band-quote__text">
-        Bienvenidos a BDS&nbsp; un espacio para conectar<br>
-        a través del diseño digital
+        Cada proyecto es una oportunidad de crear algo único.
       </p>
     </div>
     <div class="band-quote__arc" aria-hidden="true"></div>
@@ -144,8 +148,9 @@
       </h2>
 
       <p class="about-text">
-        Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto.
-        Lorem Ipsum ha sido el texto de relleno estándar de las industrias.
+        Diseñadora digital enfocada en diseño web. Me gusta resolver ideas, bajarlas a tierra y que se entiendan.
+        Trabajo con claridad, prolijidad y sentido. Me considero organizada, comprometida y atenta al detalle, siempre
+        buscando que cada proyecto no solo funcione bien, sino que también se sienta especial y con personalidad propia.
       </p>
 
       <a class="btn btn-secondary about-cta" href="#contacto">Conectar</a>
@@ -163,13 +168,13 @@
   <!-- Mis pasos -->
   <section class="steps" aria-labelledby="steps-title">
     <div class="steps__inner">
-      <h2 id="steps-title" class="steps__title">Mis pasos para iniciar un proyecto</h2>
+      <h2 id="steps-title" class="steps__title">Lo que nunca falta en mi proceso</h2>
 
       <div class="steps__grid">
         <!-- Paso 1 -->
         <article class="step">
           <div class="step__icon" aria-hidden="true">
-            <svg  viewBox="0 0 63 59" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg viewBox="0 0 63 59" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M16.1875 11.5312V2.65625C16.1875 2.0678 16.4213 1.50345 16.8374 1.08736C17.2535 0.67126 17.8178 0.4375 18.4062 0.4375C18.9947 0.4375 19.559 0.67126 19.9751 1.08736C20.3912 1.50345 20.625 2.0678 20.625 2.65625V11.5312C20.625 12.1197 20.3912 12.684 19.9751 13.1001C19.559 13.5162 18.9947 13.75 18.4062 13.75C17.8178 13.75 17.2535 13.5162 16.8374 13.1001C16.4213 12.684 16.1875 12.1197 16.1875 11.5312ZM27.2812 13.75C27.8697 13.75 28.434 13.5162 28.8501 13.1001C29.2662 12.684 29.5 12.1197 29.5 11.5312V2.65625C29.5 2.0678 29.2662 1.50345 28.8501 1.08736C28.434 0.67126 27.8697 0.4375 27.2812 0.4375C26.6928 0.4375 26.1285 0.67126 25.7124 1.08736C25.2963 1.50345 25.0625 2.0678 25.0625 2.65625V11.5312C25.0625 12.1197 25.2963 12.684 25.7124 13.1001C26.1285 13.5162 26.6928 13.75 27.2812 13.75ZM36.1562 13.75C36.7447 13.75 37.309 13.5162 37.7251 13.1001C38.1412 12.684 38.375 12.1197 38.375 11.5312V2.65625C38.375 2.0678 38.1412 1.50345 37.7251 1.08736C37.309 0.67126 36.7447 0.4375 36.1562 0.4375C35.5678 0.4375 35.0035 0.67126 34.5874 1.08736C34.1713 1.50345 33.9375 2.0678 33.9375 2.65625V11.5312C33.9375 12.1197 34.1713 12.684 34.5874 13.1001C35.0035 13.5162 35.5678 13.75 36.1562 13.75ZM62.7812 29.2812V31.5C62.7804 34.3221 61.704 37.0378 59.7713 39.0942C57.8385 41.1506 55.1947 42.3931 52.3781 42.5688C50.8645 46.8497 48.2878 50.6757 44.8898 53.6875H51.6875C52.2759 53.6875 52.8403 53.9213 53.2564 54.3374C53.6725 54.7535 53.9062 55.3178 53.9062 55.9062C53.9062 56.4947 53.6725 57.059 53.2564 57.4751C52.8403 57.8912 52.2759 58.125 51.6875 58.125H2.875C2.28655 58.125 1.7222 57.8912 1.30611 57.4751C0.89001 57.059 0.65625 56.4947 0.65625 55.9062C0.65625 55.3178 0.89001 54.7535 1.30611 54.3374C1.7222 53.9213 2.28655 53.6875 2.875 53.6875H9.68102C6.85017 51.1865 4.58204 48.1135 3.02637 44.6713C1.4707 41.2291 0.662881 37.4961 0.65625 33.7188V20.4062C0.65625 19.8178 0.89001 19.2535 1.30611 18.8374C1.7222 18.4213 2.28655 18.1875 2.875 18.1875H51.6875C54.6297 18.1875 57.4515 19.3563 59.532 21.4368C61.6124 23.5173 62.7812 26.339 62.7812 29.2812ZM49.4688 22.625H5.09375V33.7188C5.1023 37.8847 6.2796 41.9646 8.49177 45.4947C10.7039 49.0247 13.8622 51.8633 17.6075 53.6875H36.955C40.7003 51.8633 43.8586 49.0247 46.0707 45.4947C48.2829 41.9646 49.4602 37.8847 49.4688 33.7188V22.625ZM58.3438 29.2812C58.3433 27.9051 57.9164 26.563 57.1217 25.4395C56.327 24.316 55.2037 23.4664 53.9062 23.0077V33.7188C53.9043 35.112 53.7931 36.503 53.5734 37.8789C54.9501 37.4722 56.1584 36.6313 57.0181 35.4818C57.8777 34.3322 58.3428 32.9355 58.3438 31.5V29.2812Z"
                 fill="#075244" />
@@ -177,7 +182,7 @@
 
           </div>
           <p class="step__text">
-            Café para una mayor<br>concentración
+            Café, para arrancar con <br>energía
           </p>
         </article>
 
@@ -192,14 +197,14 @@
 
           </div>
           <p class="step__text">
-            Organización, para saber<br>por dónde empezar
+            Organización, para mantener <br>el rumbo
           </p>
         </article>
 
         <!-- Paso 3 -->
         <article class="step">
           <div class="step__icon" aria-hidden="true">
-            <svg  viewBox="0 0 22 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg viewBox="0 0 22 20" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd"
                 d="M4.636 2.15489C2.982 2.94489 1.75 4.83889 1.75 7.11889C1.75 11.3459 4.749 13.7709 7.587 16.0669C7.87433 16.2976 8.15833 16.5286 8.439 16.7599C8.965 17.1929 9.434 17.5739 9.886 17.8499C10.338 18.1259 10.699 18.2499 11 18.2499C11.324 18.2499 11.689 18.1109 12.127 17.8409C10.765 16.7939 9.25 15.3409 9.25 13.0589C9.25 11.4859 10.187 10.1319 11.523 9.55089C12.733 9.02489 14.191 9.16089 15.5 10.1639C16.314 9.53989 17.192 9.24589 18.047 9.24989C18.6714 9.25282 19.2845 9.41677 19.827 9.72589C20.1115 8.88632 20.2544 8.00532 20.25 7.11889C20.25 4.83889 19.018 2.94489 17.364 2.15489C15.768 1.39189 13.614 1.58489 11.552 3.82489C11.4818 3.90126 11.3964 3.96222 11.3014 4.00392C11.2064 4.04562 11.1038 4.06715 11 4.06715C10.8962 4.06715 10.7936 4.04562 10.6986 4.00392C10.6036 3.96222 10.5182 3.90126 10.448 3.82489C8.386 1.58489 6.232 1.39189 4.636 2.15489ZM21.022 10.7989C21.4967 11.4567 21.7515 12.2477 21.75 13.0589C21.75 14.5769 21.08 15.7259 20.24 16.6249C19.574 17.3379 18.756 17.9359 18.062 18.4439L17.621 18.7689C17.342 18.9789 17.021 19.2179 16.691 19.4009C16.361 19.5839 15.956 19.7499 15.5 19.7499C15.044 19.7499 14.639 19.5839 14.308 19.3999C13.9942 19.2172 13.6931 19.0134 13.407 18.7899C12.701 19.2969 11.884 19.7499 11 19.7499C10.301 19.7499 9.66 19.4699 9.104 19.1299C8.547 18.7899 7.997 18.3399 7.484 17.9169C7.20185 17.685 6.91818 17.455 6.633 17.2269C3.851 14.9959 0.25 12.1079 0.25 7.11989C0.25 4.31489 1.768 1.86389 3.99 0.801888C6.098 -0.206112 8.692 0.101888 11 2.25389C13.307 0.102888 15.902 -0.206112 18.01 0.801888C20.232 1.86389 21.75 4.31489 21.75 7.11989C21.75 8.48989 21.479 9.70789 21.022 10.7999M12.121 10.9279C11.7103 11.112 11.362 11.4116 11.1186 11.7901C10.8752 12.1687 10.7471 12.6098 10.75 13.0599C10.75 14.9429 12.22 16.0589 13.845 17.2499C13.9917 17.3566 14.1363 17.4632 14.279 17.5699C14.571 17.7889 14.811 17.9649 15.037 18.0899C15.263 18.2149 15.406 18.2499 15.5 18.2499C15.594 18.2499 15.738 18.2149 15.963 18.0899C16.188 17.9649 16.429 17.7889 16.721 17.5699C16.8877 17.4452 17.0547 17.3219 17.222 17.1999C17.91 16.6959 18.584 16.2009 19.144 15.6019C19.814 14.8849 20.25 14.0849 20.25 13.0599C20.25 12.4239 20.002 11.8519 19.605 11.4359C19.4037 11.2222 19.1613 11.0514 18.8924 10.9337C18.6235 10.816 18.3335 10.7538 18.04 10.7509C17.445 10.7479 16.736 10.9929 16.027 11.6929C15.8866 11.8315 15.6973 11.9092 15.5 11.9092C15.3027 11.9092 15.1134 11.8315 14.973 11.6929C13.931 10.6629 12.877 10.5989 12.121 10.9279Z"
                 fill="#075244" />
@@ -208,7 +213,7 @@
 
           </div>
           <p class="step__text">
-            Y amor, para que las cosas<br>queden más lindas
+            Amor, para que cada proyecto <br>tenga algo único
           </p>
         </article>
       </div>
