--- a/index.html
+++ b/index.html
@@ -269,13 +269,13 @@
       </article>
 
       <!-- Card 4 -->
-      <article class="project-card" data-cat="figma">
-        <a class="project-thumb" href="proyectos.html?p=catalogo-tipografico" aria-label="Ver Catálogo Tipográfico">
-          <img src="img/proj-4.png" alt="Catálogo Tipográfico">
+      <article class="project-card" data-cat="codigo">
+        <a class="project-thumb" href="proyectos.html?p=hobby" aria-label="Ver Hobby">
+          <img src="img/proj-4.png" alt="hobby">
         </a>
         <div class="project-meta">
-          <h3 class="project-title">Catálogo Tipográfico</h3>
-          <a class="project-more" href="proyectos.html?p=catalogo-tipografico">Ver más</a>
+          <h3 class="project-title">Hobby</h3>
+          <a class="project-more" href="proyectos.html?p=hobby">Ver más</a>
         </div>
       </article>
 
