--- a/proyectos.html
+++ b/proyectos.html
@@ -5,11 +5,14 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title id="doc-title">Proyecto • BDS</title>
-
+  <link rel="icon" type="image/png" href="img/punto.png" />
   <link rel="stylesheet" href="style.css">
   <!-- Tipografías aproximadas -->
   <link
     href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600&family=Inter:wght@400;500&display=swap"
+    rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Bungee&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poltawski+Nowy:ital,wght@0,400..700;1,400..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
 </head>
 
@@ -70,14 +73,14 @@
     <p>Revisá el enlace o volvé a <a class="project-more" href="index.html#proyectos">Proyectos</a>.</p>
   </section>
 
-<section class="related" id="related-projects" hidden>
-  <h2 class="related-title">
-    <span class="related-rule" aria-hidden="true"></span>Proyectos Similares
-  </h2>
+  <section class="related" id="related-projects" hidden>
+    <h2 class="related-title">
+      <span class="related-rule" aria-hidden="true"></span>Proyectos Similares
+    </h2>
 
-  <div class="related-grid" id="related-grid">
-  </div>
-</section>
+    <div class="related-grid" id="related-grid">
+    </div>
+  </section>
   <footer class="site-footer">
     <div class="footer__inner">
       <p class="footer__copy">
