--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section>
       <h1>
         Bienvenidos a BDS<br>
-        un lugar pensado para inspirar, crear
+        un espacio pensado para inspirar, crear
         <br>
         y hacer del diseño web una experiencia simple y atractiva
       </h1>
